--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  nagarajpg
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: just_doc
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
